--- a/css/mobile.css
+++ b/css/mobile.css
@@ -57,17 +57,21 @@
   }
   .grid-container--3 {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    /* grid-template-rows: 1fr 1fr; */
     display: grid;
     width: 100%;
     height: auto;
-    row-gap: 20px;
+    row-gap: 10px;
     margin-left: 10px;
     margin-right: 10px;
   }
+  .certificate-row-1 {
+    grid-template-columns: 1fr;
+    width: 100%;
+    border-bottom: 0px;
+    display: grid;
+  }
   .section-certificate-1 {
-    grid-column: 1/-1;
-    grid-row: 1/2;
     width: 100%;
     display: grid;
     border-bottom: 2px solid #d6c08d;
@@ -88,6 +92,7 @@
     padding-bottom: 20px;
     justify-content: center;
     align-items: center;
+    border-bottom: 2px solid #d6c08d;
   }
   .section-certificate-2 > img {
     width: 100%;
@@ -104,6 +109,9 @@
   .section-certificate-3 > img {
     width: 100%;
     height: auto;
+  }
+  .certificate .img-cert {
+    width: 100%;
   }
   /* Project section */
   .grid-container--4 {
